--- a/exam/pizza_menu_config.json
+++ b/exam/pizza_menu_config.json
@@ -11,7 +11,7 @@
         "price": 100
       },
       "pepperoni": {
-        "name": "mepperoni",
+        "name": "pepperoni",
         "icon": "🍕",
         "recipe": [
           "tomato sauce",
